kustomize/overlay/live/ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: style-book-front-ingress-internal
  namespace: development-services
  annotations:
    konghq.com/methods: GET,POST #HEAD,PUT,PATCH,OPTIONS,DELETE,CONNECT,TRACE
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "true"

spec:
  ingressClassName: kong-internal
  tls:
    - hosts:
        - style-book-front.swfs.cloud
  rules:
    - host: style-book-front.swfs.cloud
      http:
        paths:
          - path: /style-book
            pathType: ImplementationSpecific
            backend:
              service:
                name: style-book-front
                port:
                  number: 8080
